--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -34,8 +34,16 @@
 			
 		</div>
 		<div>
+			<label  for="inputGroupFile02" class="uk-text-bolder uk-margin-top">Прайс:</label>
 			
-				
+			<div class="uk-margin">
+				<div uk-form-custom>
+					<input type="file" accept="application/pdf" name="priceList" id="inputGroupFile02">
+					<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
+				</div>
+			</div>	
+			
+			<!---->	
 				<label  for="inputGroupFile01" class="uk-text-bolder uk-margin-top">Фотографии:</label>
 				
 				<div class="uk-margin">
@@ -48,6 +56,16 @@
 			<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
 			
 		</div>
+		<div>
+			
+				
+		
+			
+		
+		
+		<!-- <input name="file1" type="file" accept="application/pdf"> */ -->
+		
+	</div>
 		<div>
 			<div>
 				<p class="uk-text-bolder uk-margin-top">Местоположение(координаты либо город, улица если координаты не предусмотрены)</p>
