--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -227,10 +227,14 @@ a:hover {
     font-family: "Lato-Regular",sans-serif;
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 22px;
     border-radius: 5px;
     cursor: pointer;
+  }
+
+  .input-submit-head:hover {
+    color:white;
   }
 
   .contact-icon {
