--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <head>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <script defer src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <link rel='stylesheet' href='/stylesheets/index.css' />
+    <link rel="preload" href='/stylesheets/index.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
+    t' href='/stylesheets/index.css' />
     <link rel="stylesheet" href="/stylesheets/index-first-section.css">
     <link rel="stylesheet" href="/stylesheets/index-second-section.css">
     <link rel="stylesheet" href='/stylesheets/circles.css'>
