--- a/views/index.ejs
+++ b/views/index.ejs
@@ -289,7 +289,7 @@
 
 
 
-<script>
+<script defer>
     var swiperProjects = new Swiper('.swiper-container', {
         lazy: {
             loadPrevNext: true,
