--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <!-- UIkit JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
-    <script defer src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </head>
 
 <div class="main-section">
@@ -289,7 +289,7 @@
 
 
 
-<script defer>
+<script>
     var swiperProjects = new Swiper('.swiper-container', {
         lazy: {
             loadPrevNext: true,
