--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href='/stylesheets/circles.css'>
     
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
+    
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <!-- UIkit JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
