--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,8 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     
     <link rel="preload" href='/stylesheets/index.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
-    
+    <link rel="preload" href='/stylesheets/index-second-section.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="/stylesheets/index-first-section.css">
-    <link rel="stylesheet" href="/stylesheets/index-second-section.css">
     <link rel="stylesheet" href='/stylesheets/circles.css'>
     
     <!-- UIkit CSS -->
