--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,11 +2,11 @@
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel="stylesheet" href='/stylesheets/circles.css'>
     <!-- UIkit CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
+	<link rel="preload" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
 	<!-- UIkit JS -->
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
 </head>
  
 <div class="footer-wrapper-form">
