--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -58,7 +58,7 @@
         <div class="uk-modal-dialog">
             <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
             <div class="uk-grid-collapse uk-child-width-1-2@s uk-flex-middle" uk-grid>
-                <div class="uk-background-cover" style="background-image: url('../images/three.jpeg'); " uk-height-viewport></div>
+                <div class="uk-background-cover" style="background-image: url('../images/three.jpg'); " uk-height-viewport></div>
                 <div class="uk-padding-large">
                     <h2>Свяжитесь со мной</h2>
                     <div class="uk-form-controls">
