--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,10 +4,8 @@
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-     
+    <link rel="preload" href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
    
   </head>
   <body>
