--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <!-- UIkit JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </head>
