--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,17 @@
 <% layout('layouts/boilerplate') -%>
 <head>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    
+    <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <link rel="preload" href='/stylesheets/index.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href='/stylesheets/index-second-section.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
+    
     <link rel="stylesheet" href="/stylesheets/index-first-section.css">
+    <link rel="stylesheet" href="/stylesheets/index-second-section.css">
     <link rel="stylesheet" href='/stylesheets/circles.css'>
     
     <!-- UIkit CSS -->
-    
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-
     <!-- UIkit JS -->
-    <script async src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </head>
@@ -267,7 +266,7 @@
             
                 <figure class="card-wrapper">
                     <a href="/guides/<%= guide.id %>" class=""><img class="card-image-guide" 
-                        
+                        class="lazyload"
                         src="<%= image_url(guide.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
                         alt="<%= guide.title %>"></a>    
                         
