--- a/public/stylesheets/index-second-section.css
+++ b/public/stylesheets/index-second-section.css
@@ -8,7 +8,7 @@
 }
 
 .map-points {
-    
+    min-height: auto !important;
     background-size: 100%;
     background-repeat: no-repeat;
     margin:0 auto;
