--- a/views/partials/paginateGuides.ejs
+++ b/views/partials/paginateGuides.ejs
@@ -4,15 +4,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
-
-
 <div class="pagination-wrapper">
     <ul class="uk-pagination" uk-margin>
         <% if(guides.page - 1) { %>
-            <li class="list-wrapper "><a class="arrow-prevnext" href="/guides?page=<%= guides.page - 1 %>"><span uk-pagination-previous></span></a></li>
+            <a class="arrow-prevnext" href="/guides?page=<%= guides.page - 1 %>"><li class="list-wrapper"><span uk-pagination-previous></span></li></a>
         <% } %>
         <% if(guides.page > 9) { %>
-            <li class="list-wrapper"><a  href="/guides?page=1">1</a></li>
+            <a  href="/guides?page=1"><li class="list-wrapper">1</li></a>
         <% } %>   
         <% var i = ((guides.page) > 2 ? guides.page - 2 : 1) %>
         <% if (i !== 1) { %>
@@ -21,14 +19,18 @@
         <% if(guides.pages> 1 && guides.docs.length) { %>
             <% for (; i <= (guides.page + 2) && i <= guides.pages; i++) { %>
                 <% if (i == guides.page) { %>
-                    <li class="list-wrapper" <%= i === guides.page ? 'style=background-color:#98B8FF;' : '' %>
-                        
-                        s><a <%= i === guides.page ? 'style=color:white;' : '' %>><%= i %></a></li>
+                    <a>
+                        <li class="list-wrapper" <%= i === guides.page ? 'style=background-color:#98B8FF;color:white' : '' %> >
+                                <%= i %>
+                        </li>
+                    </a>
                 <% } else { %>
-                    <li class="list-wrapper"><a  href="/guides?page=<%= i %>"
-                        <%= i === guides.page ? 'style=color:#000;' : '' %>
-                        
-                    ><%= i %></a></li>
+                    <a href="/guides?page=<%= i %>">
+                        <li class="list-wrapper"  <%= i === guides.page ? 'style=color:#000;' : '' %> >
+                                <%= i %>
+                        </li>
+                    </a>
+                    
                 <% } %>
                 <% if (i == guides.page + 2 && i < guides.pages) { %>
                     <li class="list-wrapper"><a >...</a></li>
@@ -37,7 +39,7 @@
             
         <% } %>
         <% if((guides.page + 1) <= guides.pages) { %>
-            <li class="list-wrapper"><a class="arrow-prevnext"  href="/guides?page=<%= guides.page + 1 %>"><span uk-pagination-next></span></a></li>
+            <a class="arrow-prevnext" href="/guides?page=<%= guides.page + 1 %>"><li class="list-wrapper"><span uk-pagination-next></span></li></a>
         <% } %>
 
         
