--- a/views/guides/show.ejs
+++ b/views/guides/show.ejs
@@ -12,34 +12,25 @@
 <div class="article-wrapper">
     <h1 class="title-article"><%= guide.title %></h1>
     <div class="wrapper-link-icons">
-        <a class="link-all-theme" href="http://localhost:3000/projects?search=&location=<% guide.location %>&price%5Bmin%5D=&price%5Bmax%5D=&seaDistance=&area=">Объекты в <%= guide.location %>  <span style="text-transform: lowercase;"><% guide.location %></span></a>
+        <a class="link-all-theme" href="/projects?location=<%= guide.location %>&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&search=">Объекты в <%= guide.location %>  <span style="text-transform: lowercase;"><% guide.location %></span></a>
         <div class="icons-group">
-            
             <a href=""><i class="fab fa-twitter icon-artcile"></i></a>
             <a href=""><i class="fab fa-facebook-f icon-artcile"></i></a>
-            
         </div>
-        
     </div>
     
     <img class="article-image" src="<%= guide.images[0].url %>" alt="<%= guide.title %>">
     
     <div class="map-container">
-        
         <div class="map-info">
-            
             <a href="#" class="city-link"><%= guide.location %></a>
             <p class="map-distance">20 км до аэропорта</p>
             <p class="map-distance">8 км до центра города</p>
         </div>
         <div id='map'></div>
     </div>
-    
     <p class="article-intro"><%= guide.introduction %></p>
-   
     <p class="article-text" id="root"></p>
-    
-
     <img class="article-image" src="<%= guide.images[1].url %>" alt="<%= guide.title %>">
 
     <p class="article-conclusion" ><%= guide.conclusions %></p>
@@ -58,7 +49,6 @@
         </form>
         </div>
     <% } %>
-    
 </div>
 
 
