--- a/public/stylesheets/guide-index.css
+++ b/public/stylesheets/guide-index.css
@@ -44,7 +44,7 @@
 
 .card-wrapper {
     position: relative;
-    
+    transition: all .2s ease-in-out; 
 }
 
 figure {
@@ -55,7 +55,14 @@ figure {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    
 }
+
+.card-wrapper:hover {  
+    animation: scale 1s infinite;
+    cursor: pointer;
+    transform: scale(1.02);
+  }
 
 
 .card-wrapper:nth-of-type(1) {
