--- a/public/stylesheets/project-index.css
+++ b/public/stylesheets/project-index.css
@@ -61,7 +61,7 @@ a:hover {
 .project-price-index {
     font-family: 'GothamPro',sans-serif;
     /* identical to box height */
-    color: #5570BA;
+    color: #4B535F;
     border-radius: 12px;
     font-size: 18px;
     line-height: 22px;
@@ -69,7 +69,7 @@ a:hover {
 }
 
 .project-price-index div:hover {
-    color: #5570BA;
+    color: #4B535F;
 }
 
 
